<resources>
    <string name="app_name">鑫鑫快运</string>
    <string name="title">标题</string>
    <!--主页上的-->
    <string name="homepage">主页</string>
    <string name="car_type">车型</string>
    <string name="individual_order">个人订单</string>
    <string name="nearby">附近</string>
    <string name="I">我</string>
    <string name="mail_list">通讯录</string>
    <string name="express">快递</string>
    <string name="local_town_delivery">同城配送</string>
    <string name="online_store">商城</string>
    <string name="long_distance_freight">长途货运</string>
    <string name="details_of_charges">收费详情</string>
    <!--我的-->
    <string name="personnal_information">个人信息</string>
    <string name="setting">设置</string>
    <string name="my_store">我的商城</string>
    <string name="my_collection_of_drivers">我收藏的司机</string>
    <string name="click_to_enter">点击进入</string>
    <string name="message">消息</string>
    <string name="order_message">订单消息</string>
    <string name="system_message">系统消息</string>
    <string name="user_name">用户名</string>
    <string name="my_pay_by_other">我的代付</string>
    <string name="scanning">扫一扫</string>
    <string name="my_point_score">我的积分</string>
    <string name="my_order">我的订单</string>
    <string name="coupon">优惠券</string>
    <string name="share_to_friends">分享好友</string>
    <string name="express_query">快递查询</string>
    <string name="about_us">关于我们</string>
    <string name="common_problems">常见问题</string>
    <string name="operation_flow">操作流程</string>
    <string name="feedback">意见反馈</string>
    <string name="contact_customer_service">联系客服</string>
    <string name="agreement_terms">协议条款</string>
    <string name="log_in">登录</string>
    <string name="tv_register">注册</string>
    <string name="counter">计算器</string>
    <string name="sign_out">退出登录</string>
    <string name="register">免费注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="phone_number">手机号码</string>
    <string name="password_format">0123456789abcdefghijgklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string><!--密码的格式-->
    <string name="password">密码</string>
    <string name="find_pwd">找回密码</string>
    <string name="tele_phone_num">手机号</string>
    <string name="new_pwd">新密码</string>
    <string name="save">保存</string>
    <string name="sure">确定</string>
    <string name="submit">提交</string>
    <!--我的订单界面-->
    <string name="from_person_name">发货人姓名</string>
    <string name="to_person_name">收货人姓名</string>
    <!--popup-->
    <string name="all">全部</string>
    <string name="courier">快递员</string>
    <string name="express_outlets">快递网点</string>
    <string name="run_people">跑腿人员</string>
    <string name="local_city_car">同城货车</string>
    <string name="long_distant_car">长途货车</string>
    <string name="logistics_network">物流网点</string>
    <string name="my_favorite">我的收藏</string>
    <!--车型-->
    <string name="cartype">车型:</string>
    <string name="distance">距离:</string>
    <string name="can_weight">载重量:</string>
    <string name="price">价格:</string>
    <string name="route">路线:</string>

    <string name="name">姓名:</string>
    <string name="rate_of_praise">好评率:</string>
    <string name="delivery_times">送货次数:</string>
    <string name="please_enter_phone_number">请输入手机号码</string>
    <string name="please_enter_verification_code">请输入验证码</string>
    <string name="ask_for_verification_code">获取验证码</string>
    <string name="please_enter_invitation_code">请输入邀请码</string>
    <string name="please_enter_password">请输入6-20位英文或数字密码</string>
    <string name="I_have_agreed">我已同意鑫鑫快运的《用户协议》</string>
    <string name="I_have_read_and_agreed">我已阅读并同意</string>
    <string name="service_agreement">《服务协议》</string>
    <string name="I_want_to_sending">我要寄件</string>
    <string name="from">从</string>
    <string name="fast_pick_up">30分钟内快速上门取货</string>
    <string name="make_an_appointment_for_time">预约上门时间</string>
    <string name="please_choose">请选择</string>
    <string name="things_weight">物品重量</string>
    <string name="is_need_invoice">是否需要发票</string>
    <string name="item_type_description">物品类型说明</string>
    <string name="please_choose_from_address">请选择发货地址</string>
    <string name="please_choose_to_address">请选择收货地址</string>
    <string name="please_fill_in_detail_address">请填写详细地址</string>
    <string name="please_fill_in_the_name_of_the_goods">请输入货物名称</string>
    <string name="please_fill_in_the_weight_of_the_goods">请输入货物重量（单位吨）</string>
    <string name="please_choose_the_provincial_city">请选择省市区</string>
    <string name="please_fill_in_sender_name">请填写寄件人姓名</string>
    <string name="please_fill_in_sender_tel">请填写寄件人电话</string>
    <string name="please_fill_in_recipient_name">请填写收件人姓名</string>
    <string name="please_fill_in_recipient_tel">请填写收件人电话</string>
    <string name="order_note">订单备注</string>

    <string name="instant_order">即时下单</string>
    <string name="make_an_appointment_order">预约下单</string>
    <string name="insurance_purchase">保险购买</string>
    <string name="instant_car">即时用车</string>
    <string name="make_an_appointment">预约</string>
    <string name="home_freight">上门运费:</string>
    <string name="estimated">预计</string>
    <string name="express_company">快递公司</string>
    <string name="to">到</string>
    <string name="electric_vehicle">电动车</string>
    <string name="mini_bus">微面货车</string>
    <string name="mini_van">小型货车</string>
    <string name="matters_need_attention">注意事项</string>
    <string name="matters_need_attention_details">注意事项 : 禁止邮寄微生物，动物，易碎，易燃易爆化学物品黄赌毒等国家法律规定违禁品，邮寄员必须开箱验视！</string>

    <string name="please_input">请输入</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_currency">通用</string>
    <string name="personal_information">个人信息</string>
    <string name="accounts_and_security">账户与安全</string>
    <string name="sign_out_from_account">退出账号</string>
    <string name="taobao">淘宝</string>
    <string name="tianmao">天猫</string>
    <string name="jingdong">京东</string>
    <string name="yihaodian">1号店</string>
    <string name="weipinhui">唯品会</string>
    <string name="jumeiyoupin">聚美优品</string>
    <string name="mogujie">蘑菇街</string>
    <string name="dangdangwang">当当网</string>
    <string name="suningyigou">苏宁易购</string>
    <string name="I_want_to_order">我要下单</string>
    <string name="about_us_details">\t\t鑫鑫快运是国内值得信赖的物流网络安全平台，为了实现快递，同城配送，货运物流网约发货下单，实时接单。专业研发新一代网约信息技术专利和加密技术，响应国家实名制政策，做到信息安全无泄露，所收发货物安全无忧。让用户做到省时快优越的体验!</string>
    <string name="notice_forbid">\t\t第一条为加强邮政行业安全管理，防止禁止寄递物品进入寄递渠道，妥善处置进入寄递渠道的违禁物品，维护寄递渠道安全畅通，促进邮政业健康发展，依据《中华人民共和国邮政法》《中华人民共和国反恐怖主义法》以及《邮政行业安全监督管理办法》等法律、行政法规和相关规定，制定本规定。 \n\t\t第二条在中华人民共和国境内提供和使用寄递服务活动，以及相关监督管理工作适用本规定。 法律、行政法规以及国务院和国务院有关部门对禁止进出境物品另有规定的，适用其规定。 \n\t\t第三条本规定所称禁止寄递物品（以下简称禁寄物品），主要包括： \n（一）危害国家安全、扰乱社会秩序、破坏社会稳定的各类物品； \n（二）危及寄递安全的爆炸性、易燃性、腐蚀性、毒害性、感染性、放射性等各类物品；\n（三）法律、行政法规以及国务院和国务院有关部门规定禁止寄递的其他物品。 具体禁寄物品详见附录《禁止寄递物品指导目录》。\n \t\t第四条邮政管理部门应当监督指导提供寄递服务的企业（以下简称寄递企业）落实收寄验视制度，督促企业加强寄递安全管理；监督指导寄递企业加强对从业人员的安全教育和培训；依法对寄递企业实施安全监督检查，查处违法收寄禁寄物品行为。\n\t\t 第五条用户交寄邮件、快件应当遵守法律、行政法规以及国务院和国务院有关部门关于禁寄物品的规定，不得交寄禁寄物品，不得在邮件、快件内夹带禁寄物品，不得将禁寄物品匿报或者谎报为其他物品交寄。 \n\t\t第六条寄递企业应当在其营业场所公示并以其他方式向社会公布本规定及相关指导目录。\n \t\t第七条寄递企业应当建立健全安全教育培训制度，强化从业人员对禁寄物品的防范意识、辨识知识和处置能力。未经安全教育和培训的从业人员不得上岗作业。\n\t\t 第八条寄递企业应当严格执行收寄验视制度，依法当场验视用户交寄的物品是否属于禁寄物品，以及物品的名称、性质、数量等是否与寄递详情单所填写的内容一致，防止禁寄物品进入寄递渠道。 \n\t\t第九条寄递企业应当建立健全安全检查制度，配备符合国家标准或者行业标准的安全检查设备，安排具备专业技术和技能的人员对邮件、快件进行安全检查。\n \t\t第十条寄递企业应当制定禁寄物品处置预案，根据情况变化及时修订，并向邮政管理部门备案。寄递过程中发现禁寄物品的，应当按照预案规定妥善处置。 \n\t\t第十一条寄递企业完成收寄后发现禁寄物品或者疑似禁寄物品的，应当停止发运，立即报告事发地邮政管理部门，并按下列规定处理： \n（一）发现各类枪支（含仿制品、主要零部件）、弹药、管制器具等物品的，应当立即报告公安机关； \n（二）发现各类毒品、易制毒化学品的，应当立即报告公安机关； \n（三）发现各类爆炸品、易燃易爆等危险物品的，应当立即疏散人员、隔离现场，同时报告公安机关； \n（四）发现各类放射性、毒害性、腐蚀性、感染性等危险物品的，应当立即疏散人员、隔离现场，同时视情况报告公安、环境保护、卫生防疫、安全生产监督管理等部门； \n（五）发现各类危害国家安全和社会稳定的非法出版物、印刷品、音像制品等宣传品的，应当及时报告国家安全、公安、新闻出版等部门；\n （六）发现各类伪造或者变造的货币、证件、印章以及假冒侵权等物品的，应当及时报告公安、工商行政管理等部门； \n（七）发现各类禁止寄递的珍贵、濒危野生动物及其制品的，应当及时报告公安、野生动物行政主管等部门； \n（八）发现各类禁止进出境物品的，应当及时报告海关、国家安全、出入境检验检疫等部门； \n（九）发现使用非机要渠道寄递涉及国家秘密的文件、资料及其他物品的，应当及时报告国家安全机关； \n（十）发现各类间谍专用器材或者疑似间谍专用器材的，应当及时报告国家安全机关； \n（十一）发现其他禁寄物品或者疑似禁寄物品的，应当依法报告相关政府部门处理。 \n\t\t第十二条邮政管理部门接到寄递企业发现禁寄物品的报告后，应当按规定向上级部门报告，并视情况联合公安、国家安全、卫生防疫、海关、检验检疫、新闻出版、工商行政管理、安全生产监督管理、野生动物行政主管等部门相互配合、依法处置。 \n\t\t第十三条禁寄物品指导目录由国务院邮政管理部门会同有关部门确定、公布，并适时调整。 \n\t\t第十四条对及时发现、报告禁寄物品，维护国家安全、公共安全和人民生命财产安全，或者有效避免、减少寄递安全事故的单位和个人，邮政管理等部门可依法给予表彰。 \n\t\t第十五条寄递企业违法收寄禁寄物品的，邮政管理部门依照《中华人民共和国邮政法》《中华人民共和国反恐怖主义法》等法律、行政法规的规定予以处罚。 \n\t\t第十六条用户违反本规定，在邮件、快件内夹带禁寄物品，将禁寄物品匿报或者谎报为其他物品交寄，造成人身伤害或者财产损失的，依法承担赔偿责任；构成犯罪的，依法追究刑事责任；尚不构成犯罪的，依照《中华人民共和国治安管理处罚法》及有关法律、行政法规的规定处罚。</string>
    <string name="legwork">跑腿</string>
    <string name="logistic">物流</string>
    <string name="guomei">国美在线</string>

</resources>
