<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="@dimen/px_200"
        android:layout_height="wrap_content"
        android:background="#8860A3FE"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_all"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/all" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_courier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_courier"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/courier" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_express_outlets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_express_outlets"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/express_outlets" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_run_people"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_run_people"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/run_people" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_local_city_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_local_city_car"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/local_city_car" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_long_distant_car"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_long_distant_car"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/long_distant_car" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_logistics_network"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_logistics_network"
                style="@style/my_textview_style_small_black"
                android:text="@string/logistics_network" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/px_1"
                android:background="@drawable/popupline_black_grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_my_favorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_my_favorite"
                style="@style/my_textview_style_small_black"
                android:layout_gravity="center"
                android:text="@string/my_favorite" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
