<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home_express"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.lisa.administrator.sixgold.activity.HomeExpressActivity">

    <com.lisa.administrator.sixgold.view.ActionBarOneImg
        android:id="@+id/actionbarView_oneImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dp_5"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/activity_actionbar_item_height"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/iv_pen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/ic_create_grey_24dp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@drawable/ic_chevron_right_grey_24dp" />

                <TextView
                    android:id="@+id/textView"
                    style="@style/my_textview_style_normal_blue"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_pen"
                    android:text="@string/fast_pick_up" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/dp_5"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_actionbar_item_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@drawable/ic_add_location_orange_24dp" />

                    <TextView

                        style="@style/my_textview_style_normal_black"
                        android:layout_gravity="center_vertical"
                        android:text="@string/from"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_gravity="center_vertical"
                        android:text="@string/please_choose_from_address" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_actionbar_item_height"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_margin="@dimen/dp_10"
                        android:background="@drawable/ic_add_location_blue_24dp" />

                    <TextView
                        style="@style/my_textview_style_normal_black"

                        android:layout_gravity="center_vertical"
                        android:text="@string/to"
                        android:textColor="@color/black" />

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_gravity="center_vertical"
                        android:text="@string/please_choose_to_address" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentLeft="true"
                        android:text="@string/express_company" />

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentRight="true"
                        android:text="@string/please_choose" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentLeft="true"

                        android:text="@string/things_weight" />

                    <ImageView
                        android:layout_width="@dimen/px_30"
                        android:layout_height="@dimen/px_30"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="@dimen/px_10"
                        android:layout_toLeftOf="@+id/tv_kg" />

                    <ImageView
                        android:id="@+id/iv_kg_jia"
                        android:layout_width="@dimen/px_30"
                        android:layout_height="@dimen/px_30"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/px_10" />

                    <TextView
                        android:id="@+id/tv_kg"
                        style="@style/my_textview_style_normal_default"
                        android:layout_centerVertical="true"

                        android:layout_toLeftOf="@+id/iv_kg_jia"
                        android:text="1公斤" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center_vertical">

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentLeft="true"
                        android:text="@string/is_need_invoice" />

                    <TextView
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentRight="true"
                        android:text="@string/please_choose" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/my_textview_style_normal_default"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:text="@string/item_type_description" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_5">

                    <EditText
                        android:id="@+id/editText"
                        style="@style/my_edittext_style_normal"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_100"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:hint="@string/matters_need_attention_details" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_5"
                android:background="@color/white"
                android:orientation="vertical"
                android:padding="@dimen/dp_5">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/textView4"
                            style="@style/my_textview_style_normal_default"

                            android:text="@string/home_freight" />
                    </RelativeLayout>


                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_estimated"
                                style="@style/my_textview_style_normal_default"

                                android:text="@string/estimated" />

                            <TextView

                                style="@style/my_textview_style_normal_default"
                                android:layout_toRightOf="@+id/tv_estimated"
                                android:text="0元"
                                android:textColor="@color/orange" />
                        </LinearLayout>
                    </RelativeLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_low_item_height"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/ic_check_circle_blue_24dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/I_have_read_and_agreed" />

                    <TextView
                        style="@style/my_textview_style_normal_default"

                        android:text="@string/service_agreement"
                        android:textColor="@color/orange" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/button4"
                style="@style/my_button_style_01"
                android:layout_width="match_parent"
                android:text="@string/I_want_to_sending" />


        </LinearLayout>

    </ScrollView>
</LinearLayout>
