<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200px"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="@dimen/px_5"
    android:weightSum="14">

    <LinearLayout
        android:layout_width="@dimen/px_0"
        android:layout_height="match_parent"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/iv_car_people_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_115"
            android:layout_gravity="center"
            android:layout_margin="@dimen/px_5"
            android:background="@mipmap/truck" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="@dimen/px_0"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:padding="@dimen/px_5"
                    android:text="@string/name" />


                <TextView
                    android:id="@+id/tv_name"
                    style="@style/my_textview_style_small_black"
                    android:text="张师傅" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:padding="@dimen/px_5"
                    android:text="@string/rate_of_praise" />


                <TextView
                    android:id="@+id/tv_rate_of_praise"
                    style="@style/my_textview_style_small_black"
                    android:text="98%" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/px_5"
                    android:text="@string/route" />


                <TextView
                    android:id="@+id/tv_route"
                    style="@style/my_textview_style_small_black"
                    android:text="郑州-周口" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:padding="@dimen/px_5"
                    android:text="@string/price" />


                <TextView
                    android:id="@+id/tv_price"
                    style="@style/my_textview_style_small_black"
                    android:text="1000" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:padding="@dimen/px_5"
                    android:text="@string/cartype" />

                <TextView
                    android:id="@+id/tv_cartype"
                    style="@style/my_textview_style_small_black"
                    android:text="大卡车" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"

                    android:padding="@dimen/px_5"
                    android:text="@string/distance" />


                <TextView
                    android:id="@+id/tv_distance"
                    style="@style/my_textview_style_small_black"
                    android:text="300m" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/px_5"
                    android:text="@string/can_weight" />


                <TextView
                    android:id="@+id/tv_can_weight"

                    style="@style/my_textview_style_small_black"
                    android:text="2吨" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/px_0"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/my_textview_style_normal_black"
                    android:padding="@dimen/px_5"
                    android:text="@string/delivery_times" />


                <TextView
                    android:id="@+id/tv_delivery_times"

                    style="@style/my_textview_style_small_black"
                    android:text="23564" />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="@dimen/px_0"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/ic_star_collection_24dp" />
    </RelativeLayout>
</LinearLayout>
